# Kaptur

./: .gitignore  ABOUT.md  LICENSE  README.md  crabnebula-tauri-plugin-drag-2.1.0.tgz  index.html  landing.html  package-lock.json  package.json  pnpm-lock.yaml  trim-icon.cjs
.github/workflows/: pages.yml  release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  global-shortcut.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs  main.rs
src/components/: UpgradeModal.css  UpgradeModal.tsx
src/utils/: imageExport.ts
